--- a/Home/main.css
+++ b/Home/main.css
@@ -40,8 +40,39 @@ h3 {
 	left: 50%;
 	top: 350px;
 /*	mix-blend-mode: multiply;*/
-
 }
+
+.menu {
+	position: fixed;
+	font-family: helvetica;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	margin-left: 20px;
+	margin-right: 25px;
+	right: 0px;
+	top: 0px;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 18px;
+	padding-left: 10px;
+}
+
+a:hover {
+	color: white;
+}
+
+.mobile-menu {
+	display: none;
+}
+.mobileMenu-page {
+	display: none;
+}
+
 
 @media screen and (max-width: 640px) {
  
@@ -52,7 +83,51 @@ h3 {
 	margin-top: -120px;
 	left: 50%;
 	top: 275px;
+}
+
+.menu {
+	display: none;
+}
+
+.button {
+	position: fixed;
+	width: 20px;
+	height: 20px;
+	background-color: black;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	margin-left: 20px;
+	margin-right: 25px;
+	right: 0px;
+	top: 0px;
+}
+
+.mobile-menu {
+	position: fixed;
+	display: none;
+	text-align: center;
+	width: 100%;
+	z-index: 11;
+	margin-top: 25%
+}
+
+.mobileMenu-page {
+	display: block;
+	font-family: helvetica;
+	padding: 5px;
+	font-size: 18px;
+	font-weight: 700;
+	text-decoration: none;
+	color: black;
+	text-align: center;
+}
+
 
 }
 
-}
+
+
+
+
+
+
