--- a/Shop/main.css
+++ b/Shop/main.css
@@ -1,6 +1,5 @@
 body {
 	margin: 0px;
-	overflow: hidden;
 }
 
 .container {
@@ -8,11 +7,10 @@ body {
 	height: 1200px;
 }
 
-canvas[resize] {
-	position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
+iframe {
+	width: 100%;
+	height: 100%;
+	mix-blend-mode: multiply;
 }
 
 .logo {
@@ -37,16 +35,6 @@ h3 {
 	left: 0px;
 	top: 0px;
 
-}
-
-.images {
-	position: fixed;
-	width: 600px;
-	margin-left: -300px;
-	margin-top: -200px;
-	left: 50%;
-	top: 350px;
-/*	mix-blend-mode: multiply;*/
 }
 
 .menu {
@@ -82,16 +70,6 @@ a:hover {
 
 
 @media screen and (max-width: 640px) {
-
- 
-.images {
-	position: fixed;
-	width: 400px;
-	margin-left: -200px;
-	margin-top: -120px;
-	left: 50%;
-	top: 275px;
-}
 
 .menu {
 	display: none;
