--- a/Works/main.css
+++ b/Works/main.css
@@ -1,18 +1,11 @@
 body {
 	margin: 0px;
-	overflow: hidden;
 }
 
 .container {
 	width: 100%;
-	height: 1200px;
-}
-
-canvas[resize] {
-	position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
+	height: 1800px;
+	text-align: center;
 }
 
 .logo {
@@ -39,16 +32,6 @@ h3 {
 
 }
 
-.images {
-	position: fixed;
-	width: 600px;
-	margin-left: -300px;
-	margin-top: -200px;
-	left: 50%;
-	top: 350px;
-/*	mix-blend-mode: multiply;*/
-}
-
 .menu {
 	position: fixed;
 	font-family: helvetica;
@@ -69,6 +52,40 @@ a {
 	padding-left: 10px;
 }
 
+.outer-container {
+	display: inherit;
+	text-align: center;
+	font-family: helvetica;
+	text-transform: uppercase;
+	font-style: italic;
+	font-size: 10px;
+	font-weight: 800;
+	position: relative;
+	padding: 25px;
+	height: 1000px;
+	padding-top: 100px;
+}
+
+.flex-container {
+	display: flex;
+	width: auto;
+	height: auto;
+	padding: 10px;
+	flex-wrap: wrap;
+}
+
+.column {
+	width: 400px;
+	align-item: center;
+}
+
+img {
+  max-width: 100%;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+
 a:hover {
 	color: white;
 }
@@ -83,14 +100,8 @@ a:hover {
 
 @media screen and (max-width: 640px) {
 
- 
-.images {
-	position: fixed;
-	width: 400px;
-	margin-left: -200px;
-	margin-top: -120px;
-	left: 50%;
-	top: 275px;
+.container {
+	height: 3400px;
 }
 
 .menu {
@@ -108,6 +119,7 @@ a:hover {
 	margin-right: 25px;
 	right: 0px;
 	top: 0px;
+	z-index: 1000;
 }
 
 .mobile-menu {
