--- a/Works/main.css
+++ b/Works/main.css
@@ -41,6 +41,7 @@ h3 {
 	margin-right: 25px;
 	right: 0px;
 	top: 0px;
+	z-index: 1000;
 }
 
 a {
@@ -61,16 +62,14 @@ a {
 	font-size: 10px;
 	font-weight: 800;
 	position: relative;
-	padding: 25px;
-	height: 1000px;
+	height: auto;
 	padding-top: 100px;
 }
 
 .flex-container {
 	display: flex;
-	width: auto;
+	width: 100%;
 	height: auto;
-	padding: 10px;
 	flex-wrap: wrap;
 }
 
@@ -101,7 +100,7 @@ a:hover {
 @media screen and (max-width: 640px) {
 
 .container {
-	height: 3400px;
+	height: 4200px;
 }
 
 .menu {
