--- a/Works/lboard/main.css
+++ b/Works/lboard/main.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0px;
+	overflow-x:hidden;
 }
 
 .container {
@@ -11,7 +12,7 @@ body {
 .logo {
 	position: fixed;
 	margin-bottom: 10px;
-	margin-top: 20px;
+	margin-top: 25px;
 	margin-left: 20px;
 	margin-right: 25px;
 	width: 100px;
@@ -52,10 +53,34 @@ a {
 	font-size: 18px;
 	padding-left: 10px;
 }
-
-#imgLink {
-	padding-left: 0px;
+.content {
+	text-align: left;
 }
+
+#featIMG {
+	display: inline-block;
+	padding-top: 180px;
+	margin-left: -30px;
+	width: 600px;
+}
+
+h2 {
+	position: absolute;
+	font-family: helvetica;
+	text-transform: uppercase;
+	padding-top: 80px;
+	padding-left: 100px;
+}
+
+p {
+	display: inline-block;
+	position: absolute;
+	font-family: helvetica;
+	width: 40%;
+	padding-left: 55%;
+	padding-top: 220px;
+}
+
 
 .outer-container {
 	position: fixed;
@@ -68,7 +93,7 @@ a {
 	font-weight: 800;
 	position: relative;
 	height: auto;
-	padding-top: 100px;
+	padding-top: 140px;
 
 }
 
@@ -151,6 +176,19 @@ a:hover {
 	display: none;
 	font-weight: 200;
 	margin-top: 10%;
+}
+
+p {
+	display: inline-block;
+	position: absolute;
+	font-family: helvetica;
+	width: 55%;
+	padding-left: 100px;
+	padding-top: 480px;
+}
+
+.outer-container{
+	padding-top: 450px;
 }
 
 
