--- a/Home/main.css
+++ b/Home/main.css
@@ -17,17 +17,17 @@ canvas[resize] {
     z-index: 0;
 }
 
-.logo {
+svg {
 	position: fixed;
 	margin-bottom: 20px;
 	margin-top: 20px;
 	margin-left: 20px;
 	margin-right: 25px;
-	width: 100px;
+	width: 80px;
 	left: 0px;
 	bottom: 0px;
-
 }
+
 h3 {
 	position: fixed;
 	text-transform: uppercase;
