--- a/Work/main.css
+++ b/Work/main.css
@@ -10,17 +10,17 @@ body {
 	position: absolute;
 }
 
-.logo {
+svg {
 	position: fixed;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	margin-top: 20px;
 	margin-left: 20px;
 	margin-right: 25px;
-	width: 100px;
+	width: 80px;
 	left: 0px;
 	bottom: 0px;
-
 }
+
 h3 {
 	position: fixed;
 	text-transform: uppercase;
